fix(draggable): Removed overflow-y for form elements to be draggable

--- a/client/pages/NewForm/NewForm.module.css
+++ b/client/pages/NewForm/NewForm.module.css
@@ -16,7 +16,6 @@ h4 {
   justify-content: left;
   background-color: #f4f7fb;
   border-radius: 10px;
-  overflow-y: auto;
 }
 
 .newFormContainer {
